# tyype

./: LICENSE  README.md  setup.cfg
src/Tyype.egg-info/: PKG-INFO  SOURCES.txt
src/tyype/: __init__.py  datey.py  floaty.py  inty.py  tyype.py
src/tyype.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py  test.txt
