[metadata]
name = tyype
version = 0.0.3.0
author = Renan Gabriel Gonçalves Silva
author_email = renangabrielsilva150@gmail.com
description = Pacote utilizado para tratar a entrada padrão
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/renansilva15/tyype
project_urls =
    Bug Tracker = https://github.com/renansilva15/tyype
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    = src
[options.packages.find]
where = src